@@ -34,6 +34,7 @@ Bug fixes
  * Focal area removal not working in IE11 and MS Edge (Thibaud Colas)
  * Rewrite password change feedback message to be more user-friendly ( Casper Timmers)
  * Correct dropdown arrow styling in Firefox, IE11 (Janneke Janssen, Alexs Mathilda)
+ * Password reset no indicates specific validation errors on certain password restrictions (Lucas Moeskops)
 
 
 Upgrade considerations
